DOCS-1622: small tweaks to print styling again - expander element needed another fix - images in pool import article needed spacing

--- a/static/custom.css
+++ b/static/custom.css
@@ -267,6 +267,7 @@ font-weight: bold;
   border: 1px solid black;
   padding: 5px;
   background-color: #f2f2f2;
+  margin-bottom: 1rem;
 }
 .td-content-print .gdoc-expand__head.flex.justify-between{
 font-weight: bold;
